Fixed image alignment!

--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -86,6 +86,7 @@
     z-index: 1000;
     text-align: center;
     position: relative;
+    height: 100dvh;
   }
 
   .linkWrap {
@@ -98,10 +99,10 @@
     z-index: 999999;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 75%;
+    width: 33%;
     padding: 1%;
+    height: 100%;
+    align-items: center;
   }
 
   .linkBox img {
